Search triggered on pressing Enter in the search input

--- a/modules/frontend/src/main/resources/public/index.html
+++ b/modules/frontend/src/main/resources/public/index.html
@@ -5,7 +5,8 @@
     <title>Universal Search</title>
   </head>
   <body>
-    <p>Hi from template</p>
+    <div id="app-container"></div>
+    <div id="search-results"></div>
     <script type="text/javascript" src="universal-search-frontend-fastopt.js"></script>
   </body>
 </html>
